--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "expo": "~51.0.28",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~12.0.10",
     "expo-splash-screen": "~0.27.6",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.21.1",
+    "pg": "^8.13.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-paper": "^5.12.5",
+    "react-native-permissions": "^5.1.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
