--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
+    "react-native-vector-icons": "^10.2.0",
     "victory-core": "^37.1.2",
     "victory-native": "^37.1.2"
   },
